<resources>
    <string name="app_name">WStories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="video_icon">Video icon</string>
    <string name="empty">No stories added yet</string>
    <string name="empty_saved">No stories saved yet</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>

    <string name="message_permissions_required">Storage permissions is required to fetch stories</string>
    <string name="settings">Settings</string>

    <!-- About -->
    <string name="sj_header">Shaik Jaleel</string>
    <string name="sj_sum">Android App Developer | Custom Rom Developer</string>
    <string name="about_title">About</string>
    <string name="sum_about_app">Policies, Open Source Libraries</string>
    <string name="about_app_version">Version</string>
    <string name="about_app_version_sum">Stable 2.1</string>
    <string name="app_info_drop_target_label">App Info</string>
    <string name="app_info_sum">Device Settings</string>
    <string name="info_title">App Developer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="follow_system_theme">Follow System</string>
    <string name="interface_title">Theme</string>
    <string name="app_theme">App Theme</string>
    <string name="git_info_sum">Fork Me</string>
    <string name="git_info">GitHub</string>
    <string name="priv_info_sum">Privacy Policies</string>
    <string name="priv_info">Privacy Policy</string>
    <string name="term_info"><![CDATA[Terms & Conditions]]></string>

</resources>
