<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/info_title">
        <Preference
            app:icon="@drawable/ic_programmer"
            app:key="dev_header"
            app:summary="@string/sj_sum"
            app:title="@string/sj_header" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://iamsj7.github.io" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_github"
            android:key="git_info"
            android:persistent="false"
            android:summary="@string/git_info_sum"
            android:title="@string/git_info">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.github.com/iamsj7/WSave-Stories" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="App Details">
        <Preference
            android:icon="@drawable/ic_next"
            android:key="@string/about_app_version"
            android:persistent="false"
            android:summary="@string/about_app_version_sum"
            android:title="@string/about_app_version" />

        <Preference
            android:icon="@drawable/ic_checkmark"
            android:key="app_info"
            android:persistent="false"
            android:summary="@string/app_info_sum"
            android:title="@string/app_info_drop_target_label">
            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:com.nerdinfusions.statusx" />
        </Preference>
        <Preference
            app:fragment="com.nerdinfusions.statusx.SettingsActivity$InfoFragment"
            app:icon="@drawable/ic_button"
            app:key="messages_header"
            app:summary="@string/sum_about_app"
            app:title="@string/app_name" />
    </PreferenceCategory>
</PreferenceScreen>
